[package]
name = "program"
version = "0.0.1"
authors = ["mithraiclabs", "tomjohn1028", "Taylor123"]
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-program = "1.6.6"
spl-associated-token-account = "1.0.2"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.1"
indicatif = "0.15.0"
solana-sdk = "1.6.6"
solana-client = "1.6.6"
solana-runtime = "1.6.6"
solana-faucet = "1.6.6"
serial_test = "0.5.1"
lazy_static = "1.4.0"

[lib]
name = "solana_options"
crate-type = ["cdylib", "lib"]
