[package]
name = "psyoptions"
version = "0.0.1"
authors = ["mithraiclabs"]
edition = "2018"
description = "Bindings for interacting with the PsyOptions protocol on the Solana blockchain"
repository = "https://github.com/mithraiclabs/psyoptions"
documentation = "https://docs.psyoptions.io"
keywords = ["psyoptions", "solana", "solana_program", "web3"]
license = "Apache-2.0"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-program = "1.6.8"
spl-associated-token-account = "1.0.2"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.1"
indicatif = "0.15.0"
solana-sdk = "1.6.8"
solana-client = "1.6.8"
solana-runtime = "1.6.8"
solana-faucet = "1.6.8"
serial_test = "0.5.1"
lazy_static = "1.4.0"

[profile.release]
lto = true

[lib]
name = "psyoptions"
crate-type = ["cdylib", "lib"]
