[package]
name = "cpi_examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_examples"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.1"
anchor-spl = "0.16.1"
solana-program = "1.7.11"
psy_american = { path = "../psy_american", features = ["cpi"] }
