[package]
name = "cpi_examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_examples"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = { version = "0.18.2", features = ["dex"] }
solana-program = "1.8.5"
psy_american = { path = "../psy_american", features = ["cpi"] }
