[package]
name = "cpi_examples"
version = "0.2.5"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_examples"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
solana-program = "1.9.13"
psy_american = { path = "../psy_american", features = ["cpi"] }
