[package]
name = "program"
version = "0.0.1"
authors = ["mithraiclabs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-sdk = { version = "=1.3.17", default-features = false, optional = true }

[lib]
name = "solana_bpf_program"
crate-type = ["cdylib", "lib"]
