[package]
name = "psy_american"
version = "0.2.5"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "psy_american"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = { version = "0.24.2" }
serum_dex = "0.4.0"
solana-program = "1.9.13"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
