[package]
name = "psy_american"
version = "0.2.6"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "psy_american"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = { version = "0.25.0", features = ["dex"] }
solana-program = "1.9.13"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
psyfi-serum-dex-permissioned = { version = "0.5.7" }
